<resources>
    <string name="app_name">Android Chess</string>
    <string name="textview">TextView</string>
    <string name="draw">DRAW</string>
    <string name="undo">UNDO</string>
    <string name="resign">RESIGN</string>
    <string name="auto">AUTO</string>
    <string name="recordingsButton">RECORDINGS</string>
    <string name="gameButton">GAME</string>
    <string name="enter_a_name_for_the_game_recording">Enter a name for the game recording</string>
</resources>
